# zephyr-comms

./: .gitignore  README.md  res  west.yml
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  run.sh
echo/: prj.conf
echo/src/: socket_echo.c
echo_client/: prj.conf
echo_server/: overlay-ppp.conf  overlay-ppp.dts
eth_native_posix/: README.rst
modules/: modules.cmake
modules/tinyframe/: CMakeLists.txt  Kconfig  module.yml
modules/tinyframe/zephyr/: module.yml
protobuf_ethernet/: CMakeLists.txt  Kconfig  prj.conf
protobuf_ethernet/src/: main.c  simple.proto  socket_echo.c
protobuf_uart/: CMakeLists.txt  prj.conf
protobuf_uart/src/: main.c
scripts/: build_ppp.sh
tools/: cerebri_comms.py  generate_protobuf.sh  simple_pb2.py  synapse_bridge.py
